--- a/Swift Documentation/2.Language Guide/15.Deinitialization.md
+++ b/Swift Documentation/2.Language Guide/15.Deinitialization.md
@@ -1,1 +1,8 @@
-# Deinitialization
+# Deinitialization (초기화 해제)
+
+
+***
+
+### ⬅️ [Initialization](https://github.com/Developer-Nova/Swift-Documentation/blob/main/Swift%20Documentation/2.Language%20Guide/14.Initialization.md)
+
+### ➡️ [Optional Chaining](https://github.com/Developer-Nova/Swift-Documentation/blob/main/Swift%20Documentation/2.Language%20Guide/16.Optional%20Chaining.md)
