--- a/Swift Documentation/2.Language Guide/16.Optional Chaining.md
+++ b/Swift Documentation/2.Language Guide/16.Optional Chaining.md
@@ -1,1 +1,8 @@
-# Optional Chaining
+# Optional Chaining (옵셔널 체이닝)
+
+
+***
+
+### ⬅️ [Deinitialization](https://github.com/Developer-Nova/Swift-Documentation/blob/main/Swift%20Documentation/2.Language%20Guide/15.Deinitialization.md)
+
+### ➡️ [Error Handling](https://github.com/Developer-Nova/Swift-Documentation/blob/main/Swift%20Documentation/2.Language%20Guide/17.Error%20Handling.md)
