--- a/Swift Documentation/2.Language Guide/19.Macros.md
+++ b/Swift Documentation/2.Language Guide/19.Macros.md
@@ -1,1 +1,8 @@
-# Macros
+# Macros (매크로)
+
+
+***
+
+### ⬅️ [Concurrency](https://github.com/Developer-Nova/Swift-Documentation/blob/main/Swift%20Documentation/2.Language%20Guide/18.Concurrency.md)
+
+### ➡️ [Type Casting](https://github.com/Developer-Nova/Swift-Documentation/blob/main/Swift%20Documentation/2.Language%20Guide/20.Type%20Casting.md)
