--- a/Swift Documentation/2.Language Guide/20.Type Casting.md
+++ b/Swift Documentation/2.Language Guide/20.Type Casting.md
@@ -1,1 +1,8 @@
-# Type Casting
+# Type Casting (타입 캐스팅)
+
+
+***
+
+### ⬅️ [Macros](https://github.com/Developer-Nova/Swift-Documentation/blob/main/Swift%20Documentation/2.Language%20Guide/19.Macros.md)
+
+### ➡️ [Nested Types](https://github.com/Developer-Nova/Swift-Documentation/blob/main/Swift%20Documentation/2.Language%20Guide/21.Nested%20Types.md)
