--- a/Swift Documentation/2.Language Guide/21.Nested Types.md
+++ b/Swift Documentation/2.Language Guide/21.Nested Types.md
@@ -1,1 +1,8 @@
-# Nested Types
+# Nested Types (중첩 타입)
+
+
+***
+
+### ⬅️ [Type Casting](https://github.com/Developer-Nova/Swift-Documentation/blob/main/Swift%20Documentation/2.Language%20Guide/20.Type%20Casting.md)
+
+### ➡️ [Extensions](https://github.com/Developer-Nova/Swift-Documentation/blob/main/Swift%20Documentation/2.Language%20Guide/22.Extensions.md)
