--- a/Swift Documentation/2.Language Guide/22.Extensions.md
+++ b/Swift Documentation/2.Language Guide/22.Extensions.md
@@ -1,1 +1,8 @@
-# Extensions
+# Extensions (확장)
+
+
+***
+
+### ⬅️ [Nested Types](https://github.com/Developer-Nova/Swift-Documentation/blob/main/Swift%20Documentation/2.Language%20Guide/21.Nested%20Types.md)
+
+### ➡️ [Protocols](https://github.com/Developer-Nova/Swift-Documentation/blob/main/Swift%20Documentation/2.Language%20Guide/23.Protocols.md)
