--- a/Swift Documentation/2.Language Guide/23.Protocols.md
+++ b/Swift Documentation/2.Language Guide/23.Protocols.md
@@ -1,1 +1,8 @@
-# Protocols
+# Protocols (프로토콜)
+
+
+***
+
+### ⬅️ [Extensions](https://github.com/Developer-Nova/Swift-Documentation/blob/main/Swift%20Documentation/2.Language%20Guide/22.Extensions.md)
+
+### ➡️ [Generics](https://github.com/Developer-Nova/Swift-Documentation/blob/main/Swift%20Documentation/2.Language%20Guide/24.Generics.md)
