--- a/Swift Documentation/2.Language Guide/24.Generics.md
+++ b/Swift Documentation/2.Language Guide/24.Generics.md
@@ -1,1 +1,8 @@
-# Generics
+# Generics (제네릭)
+
+
+***
+
+### ⬅️ [Protocols](https://github.com/Developer-Nova/Swift-Documentation/blob/main/Swift%20Documentation/2.Language%20Guide/23.Protocols.md)
+
+### ➡️ [Opaque and Boxed Types](https://github.com/Developer-Nova/Swift-Documentation/blob/main/Swift%20Documentation/2.Language%20Guide/25.Opaque%20and%20Boxed%20Types.md)
