Update 25.Opaque and Boxed Types.md

--- a/Swift Documentation/2.Language Guide/25.Opaque and Boxed Types.md
+++ b/Swift Documentation/2.Language Guide/25.Opaque and Boxed Types.md
@@ -1,1 +1,8 @@
-# Opaque and Boxed Types
+# Opaque and Boxed Types (불투명한 타입 및 박스 타입)
+
+
+***
+
+### ⬅️ [Generics](https://github.com/Developer-Nova/Swift-Documentation/blob/main/Swift%20Documentation/2.Language%20Guide/24.Generics.md)
+
+### ➡️ [Automatic Reference Counting](https://github.com/Developer-Nova/Swift-Documentation/blob/main/Swift%20Documentation/2.Language%20Guide/26.%20Automatic%20Reference%20Counting.md)
