Update 26. Automatic Reference Counting.md

--- a/Swift Documentation/2.Language Guide/26. Automatic Reference Counting.md
+++ b/Swift Documentation/2.Language Guide/26. Automatic Reference Counting.md
@@ -1,1 +1,8 @@
-# Automatic Reference Counting
+# Automatic Reference Counting ()
+
+
+***
+
+### ⬅️ [Opaque and Boxed Types](https://github.com/Developer-Nova/Swift-Documentation/blob/main/Swift%20Documentation/2.Language%20Guide/25.Opaque%20and%20Boxed%20Types.md)
+
+### ➡️ [Memory Safety](https://github.com/Developer-Nova/Swift-Documentation/blob/main/Swift%20Documentation/2.Language%20Guide/27.Memory%20Safety.md)
