--- a/Swift Documentation/2.Language Guide/27.Memory Safety.md
+++ b/Swift Documentation/2.Language Guide/27.Memory Safety.md
@@ -1,1 +1,8 @@
-# Memory Safety
+# Memory Safety (메모리 안전성)
+
+
+***
+
+### ⬅️ [Automatic Reference Counting](https://github.com/Developer-Nova/Swift-Documentation/blob/main/Swift%20Documentation/2.Language%20Guide/26.%20Automatic%20Reference%20Counting.md)
+
+### ➡️ [Access Control](https://github.com/Developer-Nova/Swift-Documentation/blob/main/Swift%20Documentation/2.Language%20Guide/28.Access%20Control.md)
