--- a/Swift Documentation/2.Language Guide/28.Access Control.md
+++ b/Swift Documentation/2.Language Guide/28.Access Control.md
@@ -1,1 +1,8 @@
-# Access Control
+# Access Control (접근 제어)
+
+
+***
+
+### ⬅️ [Memory Safety](https://github.com/Developer-Nova/Swift-Documentation/blob/main/Swift%20Documentation/2.Language%20Guide/27.Memory%20Safety.md)
+
+### ➡️ [Advanced Operators](https://github.com/Developer-Nova/Swift-Documentation/blob/main/Swift%20Documentation/2.Language%20Guide/29.Advanced%20Operators.md)
