--- a/Swift Documentation/3.Language Reference/1.About the Language Reference.md
+++ b/Swift Documentation/3.Language Reference/1.About the Language Reference.md
@@ -1,8 +1,8 @@
 # About the Language Reference
 
 
-
-
 ***
 
-### ➡️ [Lexical Structure]()
+### ⬅️ [Advanced Operators](https://github.com/Developer-Nova/Swift-Documentation/blob/main/Swift%20Documentation/2.Language%20Guide/29.Advanced%20Operators.md)
+
+### ➡️ [Lexical Structure](https://github.com/Developer-Nova/Swift-Documentation/blob/main/Swift%20Documentation/3.Language%20Reference/2.Lexical%20Structure.md)
