--- a/Swift Documentation/3.Language Reference/2.Lexical Structure.md
+++ b/Swift Documentation/3.Language Reference/2.Lexical Structure.md
@@ -1,1 +1,8 @@
-# Lexical Structure
+# Lexical Structure (어휘 구조)
+
+
+***
+
+### ⬅️ [About the Language Reference](https://github.com/Developer-Nova/Swift-Documentation/blob/main/Swift%20Documentation/3.Language%20Reference/1.About%20the%20Language%20Reference.md)
+
+### ➡️ [Types](https://github.com/Developer-Nova/Swift-Documentation/blob/main/Swift%20Documentation/3.Language%20Reference/3.Types.md)
