--- a/Swift Documentation/3.Language Reference/3.Types.md
+++ b/Swift Documentation/3.Language Reference/3.Types.md
@@ -1,1 +1,8 @@
-# Types
+# Types (타입)
+
+
+***
+
+### ⬅️ [Lexical Structure](https://github.com/Developer-Nova/Swift-Documentation/blob/main/Swift%20Documentation/3.Language%20Reference/2.Lexical%20Structure.md)
+
+### ➡️ [Expressions](https://github.com/Developer-Nova/Swift-Documentation/blob/main/Swift%20Documentation/3.Language%20Reference/4.Expressions.md)
