--- a/Swift Documentation/3.Language Reference/5.Statements.md
+++ b/Swift Documentation/3.Language Reference/5.Statements.md
@@ -1,1 +1,8 @@
-# Statements
+# Statements (구문)
+
+
+***
+
+### ⬅️ [Expressions](https://github.com/Developer-Nova/Swift-Documentation/blob/main/Swift%20Documentation/3.Language%20Reference/4.Expressions.md)
+
+### ➡️ [Declarations](https://github.com/Developer-Nova/Swift-Documentation/blob/main/Swift%20Documentation/3.Language%20Reference/6.Declarations.md)
