--- a/Swift Documentation/3.Language Reference/6.Declarations.md
+++ b/Swift Documentation/3.Language Reference/6.Declarations.md
@@ -1,1 +1,8 @@
-# Declarations
+# Declarations (선언)
+
+
+ ***
+
+### ⬅️ [Statements](https://github.com/Developer-Nova/Swift-Documentation/blob/main/Swift%20Documentation/3.Language%20Reference/5.Statements.md)
+
+### ➡️ [Attributes](https://github.com/Developer-Nova/Swift-Documentation/blob/main/Swift%20Documentation/3.Language%20Reference/7.Attributes.md)
