--- a/Swift Documentation/3.Language Reference/7.Attributes.md
+++ b/Swift Documentation/3.Language Reference/7.Attributes.md
@@ -1,1 +1,8 @@
-# Attributes
+# Attributes (속성)
+
+
+***
+
+### ⬅️ [Declarations](https://github.com/Developer-Nova/Swift-Documentation/blob/main/Swift%20Documentation/3.Language%20Reference/6.Declarations.md)
+
+### ➡️ [Patterns](https://github.com/Developer-Nova/Swift-Documentation/blob/main/Swift%20Documentation/3.Language%20Reference/8.Patterns.md)
