--- a/Swift Documentation/3.Language Reference/8.Patterns.md
+++ b/Swift Documentation/3.Language Reference/8.Patterns.md
@@ -1,1 +1,8 @@
-# Patterns
+# Patterns (패턴)
+
+
+***
+
+### ⬅️ [Attributes](https://github.com/Developer-Nova/Swift-Documentation/blob/main/Swift%20Documentation/3.Language%20Reference/7.Attributes.md)
+
+### ➡️ [Generic Parameters and Arguments](https://github.com/Developer-Nova/Swift-Documentation/blob/main/Swift%20Documentation/3.Language%20Reference/9.Generic%20Parameters%20and%20Arguments.md)
