Update 9.Generic Parameters and Arguments.md

--- a/Swift Documentation/3.Language Reference/9.Generic Parameters and Arguments.md
+++ b/Swift Documentation/3.Language Reference/9.Generic Parameters and Arguments.md
@@ -1,1 +1,8 @@
-# Generic Parameters and Arguments
+# Generic Parameters and Arguments (제네릭 파라미터와 인수)
+
+
+***
+
+### ⬅️ [Patterns](https://github.com/Developer-Nova/Swift-Documentation/blob/main/Swift%20Documentation/3.Language%20Reference/8.Patterns.md)
+
+### ➡️ [Document Revision History](https://github.com/Developer-Nova/Swift-Documentation/blob/main/Swift%20Documentation/4.Revision%20History/Document%20Revision%20History.md)
