Update 9.Generic Parameters and Arguments.md

--- a/Swift Documentation/3.Language Reference/9.Generic Parameters and Arguments.md
+++ b/Swift Documentation/3.Language Reference/9.Generic Parameters and Arguments.md
@@ -5,4 +5,4 @@
 
 ### ⬅️ [Patterns](https://github.com/Developer-Nova/Swift-Documentation/blob/main/Swift%20Documentation/3.Language%20Reference/8.Patterns.md)
 
-### ➡️ [Document Revision History](https://github.com/Developer-Nova/Swift-Documentation/blob/main/Swift%20Documentation/4.Revision%20History/Document%20Revision%20History.md)
+### ➡️ [Summary of the Grammar](https://github.com/Developer-Nova/Swift-Documentation/blob/main/Swift%20Documentation/3.Language%20Reference/10.Summary%20of%20the%20Grammar.md)
