Update 3.Strings and Characters.md

--- a/Swift Documentation/2.Language Guide/3.Strings and Characters.md
+++ b/Swift Documentation/2.Language Guide/3.Strings and Characters.md
@@ -303,6 +303,80 @@ print(catString)
 
 ## 문자열과 문자 연결 (Concatenating Strings and Characters)
 
+`String` 값은 덧셈 연산자 (`+`) 를 추가 (또는 연결) 하여 새로운 `String` 값을 생성할 수 있습니다.
+
+~~~ swift
+let string1 = "hello"
+let string2 = " there"
+var welcome = string1 + string2
+// welcome now equals "hello there"
+~~~
+
+#
+
+또한 기존의 `String` 변수에 덧셈 할당 연산자 (`+=`) 를 사용하여 `String` 값을 추가할 수도 있습니다.
+
+~~~ swift
+var instruction = "look over"
+instruction += string2
+// instruction now equals "look over there"
+~~~
+
+#
+
+`String` 타입의 `append()` 메서드를 사용하여 `String` 변수에 `Character` 값을 추가할 수 있습니다.
+
+~~~ swift
+let exclamationMark: Character = "!"
+welcome.append(exclamationMark)
+// welcome now equals "hello there!"
+~~~
+
+> Note   
+> `Character` 값에는 반드시 단일 문자만 포함되어야 하므로 `Character` 변수에 추가로 `String` 또는 `Character` 값을 추가할 수 없습니다.
+
+#
+
+아래 예시에서는 여러줄 문자열 리터럴을 사용하여 긴 문자열의 라인을 구성하는 경우 문자열 매 라인 끝에 공백이 포함되길 원합니다.
+
+~~~ swift
+let badStart = """
+    one
+    two
+    """
+let end = """
+    three
+    """
+print(badStart + end)
+// Prints two lines:
+// one
+// twothree
+
+
+let goodStart = """
+    one
+    two
+
+    """
+print(goodStart + end)
+// Prints three lines:
+// one
+// two
+// three
+~~~
+
+위의 코드에서 `badStart` 와 `end` 를 출력하면 원하는 결과와 다르게 두줄 문자열로 출력됩니다.
+
+`badStart` 의 마지막 줄에 개행이 포함되지 않았기 때문에 해당 줄은 `end` 의 첫번째 줄과 결합된 결과를 얻게 됩니다.
+
+반면에 `goodStart` 마지막 줄에는 개행이 포함되어 있으므로 `end` 와 결합하면 원하는 결과와 같이 세줄로 출력됩니다.
+
+<br>
+
+## 문자열 보간 (String Interpolation)
+
+
+
 
 
 
