Update 3.Strings and Characters.md

--- a/Swift Documentation/2.Language Guide/3.Strings and Characters.md
+++ b/Swift Documentation/2.Language Guide/3.Strings and Characters.md
@@ -375,6 +375,61 @@ print(goodStart + end)
 
 ## 문자열 보간 (String Interpolation)
 
+문자열 보간 (String interpolation) 은 문자열 리터럴 내부에 상수, 변수, 리터럴 및 표현식의 값을 포함시키고 혼합해 새로운 `String` 값을 구성하는 방법입니다.
+
+한줄 및 여러줄 문자열 리터럴 모두에서 문자열 보간을 사용할 수 있습니다.
+
+문자열 리터럴에 삽입하는 각 항목은 백슬래시 (`\`) 접두사에 소괄호를 감싸서 삽입합니다.
+
+~~~ swift
+let multiplier = 3
+let message = "\(multiplier) times 2.5 is \(Double(multiplier) * 2.5)"
+// message is "3 times 2.5 is 7.5"
+~~~
+
+위의 예제에서 `multiplier` 의 값은 문자열 리터럴안에 `\(multiplier)` 로 삽입됩니다.
+
+실제 문자열을 생성하기 위해 문자열 보간이 평가될 때 `multiplier` 의 실제 값으로 대체됩니다.
+
+#
+
+`multiplier` 의 값은 문자열 뒷부분에 있는 더 큰 표현식의 일부이기도 합니다.
+
+이 표현식은 `Double(multiplier) * 2.5` 의 값을 계산하고 문자열에 결과 `(7.5)` 를 삽입합니다.
+
+이 경우 표현식은 문자열 리터럴에 포함될 때 `\(Double(multiplier) * 2.5)` 로 작성합니다.
+
+#
+
+확장된 문자열 구분기호를 사용하여 문자열 보간으로 처리될 문자가 포함된 문자열을 만들 수 있습니다.
+
+~~~ swift
+print(#"Write an interpolated string in Swift using \(multiplier)."#)
+// Prints "Write an interpolated string in Swift using \(multiplier)."
+~~~
+
+#
+
+확장된 구분기호를 사용하는 문자열 내부에서 문자열 보간을 사용하려면 백슬래시 뒤의 숫자 기호 갯수를 문자열의 시작과 끝에 있는 숫자 기호 갯수와 일치시킵니다.
+
+~~~ swift
+print(#"6 times 7 is \#(6 * 7)."#)
+// Prints "6 times 7 is 42."
+~~~
+
+> Note    
+> 보간된 문자열 내부에서 소괄호안에 작성하는 표현식에는 이스케이프 처리되지 않은 백슬래시 (`\`), 캐리지 리턴 또는 개행을 포함할 수 없습니다.
+> 그러나 다른 문자열 리터럴은 포함할 수 있습니다.
+
+<br>
+
+## 유니코드 (Unicode)
+
+
+
+
+
+
 
 
 
