--- a/Swift Documentation/2.Language Guide/3.Strings and Characters.md
+++ b/Swift Documentation/2.Language Guide/3.Strings and Characters.md
@@ -425,6 +425,16 @@ print(#"6 times 7 is \#(6 * 7)."#)
 
 ## 유니코드 (Unicode)
 
+유니코드 (Unicode) 는 인코딩, 표기 그리고 다른 쓰기 시스템에서의 텍스트 처리를 위한 국제 표준입니다.
+
+이를 통해 모든 언어의 거의 모든 문자를 표준화된 형식으로 표현하고 텍스트 파일이나 웹페이지오 같은 외부소스에서 해당 문자를 읽고 쓸 수 있습니다.
+
+Swift 의 `String` 과 `Character` 타입은 유니코드와 완벽하게 호환됩니다.
+
+<br>
+
+### 유니코드 스칼라 값 (Unicode Scalar Values)
+
 
 
 
