Update 3.Strings and Characters.md

--- a/Swift Documentation/2.Language Guide/3.Strings and Characters.md
+++ b/Swift Documentation/2.Language Guide/3.Strings and Characters.md
@@ -435,6 +435,21 @@ Swift 의 `String` 과 `Character` 타입은 유니코드와 완벽하게 호환
 
 ### 유니코드 스칼라 값 (Unicode Scalar Values)
 
+Swift 의 기본 `String` 타입은 유니코드 스칼라 값 (Unicode scalar values) 으로 부터 생성됩니다.
+
+유니코드 스칼라 값은 `LATIN SMALL LETTER A` (`"a"`) 의 경우 `U+0061` 또는 `FRONT-FACING BABY CHICK` (`"🐥"`) 의 경우 `U+1F425` 와 같은 문자를 위한 유니크한 21-bit 숫자 또는 수정자 입니다.
+
+#
+
+모든 21-bit 유니코드 스칼라 값이 문자에 할당되는 것은 아닙니다.
+
+일부 스칼라는 나중에 할당되거나 UTF-16 인코딩에 사용하기 위해 예약되어 있습니다.
+
+문자에 할당된 스칼라 값은 일반적으로 위의 예제에서 `LATIN SMALL LETTER A` 와 `FRONT-FACING BABY CHICK` 와 같이 이름을 가지고 있습니다.
+
+<br>
+
+### 확장된 문자소 클러스터 (Extended Grapheme Clusters)
 
 
 
