Update 3.Strings and Characters.md

--- a/Swift Documentation/2.Language Guide/3.Strings and Characters.md
+++ b/Swift Documentation/2.Language Guide/3.Strings and Characters.md
@@ -451,10 +451,79 @@ Swift 의 기본 `String` 타입은 유니코드 스칼라 값 (Unicode scalar v
 
 ### 확장된 문자소 클러스터 (Extended Grapheme Clusters)
 
+Swift 의 `Character` 타입의 모든 인스턴스는 단일 확장 문자소 클러스터 (extended grapheme cluster) 를 나타냅니다.
 
+확장 문자소 클러스터는 결합되었을 때 사람이 읽을 수 있는 단일 문자를 생성하는 하나 이상의 유니코드 스칼라 시퀀스 입니다.
 
+#
 
+여기 예제가 있습니다.
 
+문자 `é` 은 단일 유니코드 스칼라 `é` (`LATIN SMALL LETTER E WITH ACUTE, 또는 U+00E9`) 로 표기 가능합니다.
+
+그러나 동일한 문자이고 표준 문자인 `e` (`LATIN SMALL LETTER E, 또는 U+0065`) 이어서 (`COMBINING ACUTE ACCENT`) 스칼라 (`U+0301`) 가 오는 스칼라 쌍으로 표시될 수도 있습니다.
+
+`COMBINING ACUTE ACCENT` 스칼라는 앞에 오는 스칼라에 그래픽적으로 적용되어 유니코드 인식 텍스트 렌더링 시스템에서 렌더링될 때 `e` 를 `é` 로 변환합니다.
+
+#
+
+두 경우 모두 문자 `é` 는 확장된 문자소 클러스터를 나타내는 단일 Swift 문자값으로 표시됩니다.
+
+첫번째의 경우에는 클러스터에 단일 스칼라가 포함됩니다.
+
+두번째의 경우에는 두 스칼라의 클라스터 입니다.
+
+~~~ swift
+let eAcute: Character = "\u{E9}"                         // é
+let combinedEAcute: Character = "\u{65}\u{301}"          // e followed by ́
+// eAcute is é, combinedEAcute is é
+~~~
+
+#
+
+확장 문자소 클러스터는 여러 복잡한 스크립트 문자를 단일 `Character` 값으로 표현하는 유연한 방법입니다.
+
+예를 들어 한글의 한글 음절은 단일 시퀀스 또는 분해된 시퀀스로 표시될 수 있습니다.
+
+이 두 표현은 Swift 에서 모두 단일 `Character` 값으로 간주됩니다.
+
+~~~ swift
+let precomposed: Character = "\u{D55C}"                  // 한
+let decomposed: Character = "\u{1112}\u{1161}\u{11AB}"   // ᄒ, ᅡ, ᆫ
+// precomposed is 한, decomposed is 한
+~~~
+
+#
+
+확장 문자소 클러스터는 마크 (예: `COMBINING ENCLOSING CIRCLE, 또는 U+20DD`) 를 둘러싸는 스칼라를 사용하여 다른 유니코드 스칼라를 단일 문자값의 일부로 묶을 수 있습니다.
+
+~~~ swift
+let enclosedEAcute: Character = "\u{E9}\u{20DD}"
+// enclosedEAcute is é⃝
+~~~
+
+#
+
+지역 표시 기호에 대한 유니코드 스칼라를 쌍으로 결합하여 단일 `Character` 값으로 만들 수 있습니다.
+
+예를 들어 `REGIONAL INDICATOR SYMBOL LETTER U(U+1F1FA)` 와 `REGIONAL INDICATOR SYMBOL LETTER S(U+1F1F8)` 의 조합이 있습니다.
+
+~~~ swift
+let regionalIndicatorForUS: Character = "\u{1F1FA}\u{1F1F8}"
+// regionalIndicatorForUS is 🇺🇸
+~~~
+
+<br>
+
+## 문자 카운팅 (Counting Characters)
+
+문자열에서 `Character` 값의 갯수를 구하려면 문자열의 `count` 프로퍼티를 사용합니다.
+
+~~~ swift
+let unusualMenagerie = "Koala 🐨, Snail 🐌, Penguin 🐧, Dromedary 🐪"
+print("unusualMenagerie has \(unusualMenagerie.count) characters")
+// Prints "unusualMenagerie has 40 characters"
+~~~
 
 
 
