Update 3.Strings and Characters.md

--- a/Swift Documentation/2.Language Guide/3.Strings and Characters.md
+++ b/Swift Documentation/2.Language Guide/3.Strings and Characters.md
@@ -525,6 +525,50 @@ print("unusualMenagerie has \(unusualMenagerie.count) characters")
 // Prints "unusualMenagerie has 40 characters"
 ~~~
 
+Swift 에서 `Chracater` 값을 위한 확장 문자소 클러스터 사용은 문자열의 연결 및 수정이 항상 문자열의 문자 수에 영향을 주지 않습니다.
+
+예를 들어 4개의 문자 단어인 `cafe` 로 새로운 문자열을 초기화 하고 문자열 끝에 `COMBINING ACUTE ACCENT` (`U+0301`) 를 추가하면 결과 문자열은 4번째 문자가 `e` 가 아닌 `é` 가 되고 문자의 갯수는 변함없이 `4` 입니다.
+
+~~~ swift
+var word = "cafe"
+print("the number of characters in \(word) is \(word.count)")
+// Prints "the number of characters in cafe is 4"
+
+
+word += "\u{301}"    // COMBINING ACUTE ACCENT, U+0301
+
+
+print("the number of characters in \(word) is \(word.count)")
+// Prints "the number of characters in café is 4"
+~~~
+
+> Note    
+> 확장 문자소 클러스터는 여러개의 유니코드 스칼라로 구성될 수 있습니다.
+> 이것은 서로 다른 문자 및 동일한 문자의 서로 다른 표현이 저장하는데 필요한 메모리 양이 다를 수 있음을 의미합니다.
+> 이 때문에 Swift 의 문자는 각각 문자열에서 동일한 양의 메모리를 차지하지 않습니다.
+> 그 결과 확장된 문자소 클러스터 경계를 결정하기 위해 문자열을 반복하지 않고는 문자열의 문자 수를 계산할 수 없습니다.
+> 특히 긴 문자열 값으로 작업하는 경우, 해당 문자열의 문자를 결정하려면 `count` 프로퍼티가 전체 문자열의 유니코드 스칼라를 반복해야 합니다.
+>
+> `count` 프로퍼티로 반환된 문자의 갯수는 같은 문자여도 `NSString` 의 `length` 프로퍼티와 항상 동일하지는 않습니다.
+> `NSString` 의 길이는 문자열 내의 유니코드 확장 문자소 클러스터의 수가 아니라 문자열의 `UTF-16` 표현 내의 16-bit 코드 단위 수를 기반으로 합니다.
+
+<br>
+
+## 문자열 접근과 수정 (Accessing And Modifying a String)
+
+문자열의 메서드와 프로퍼티 또는 서브스크립트 구문으로 문자열에 접근, 수정할 수 있습니다.
+
+<br>
+
+### 문자열 인덱스 (String Indices)
+
+
+
+
+
+
+
+
 
 
 
