Update 3.Strings and Characters.md

--- a/Swift Documentation/2.Language Guide/3.Strings and Characters.md
+++ b/Swift Documentation/2.Language Guide/3.Strings and Characters.md
@@ -556,13 +556,114 @@ print("the number of characters in \(word) is \(word.count)")
 
 ## 문자열 접근과 수정 (Accessing And Modifying a String)
 
-문자열의 메서드와 프로퍼티 또는 서브스크립트 구문으로 문자열에 접근, 수정할 수 있습니다.
+문자열의 메서드와 프로퍼티 또는 서브 스크립트 구문으로 문자열에 접근, 수정할 수 있습니다.
 
 <br>
 
 ### 문자열 인덱스 (String Indices)
 
+각 `String` 값에는 문자열의 각 `Character` 의 위치에 해당하는 `String.Index` 인 인덱스 타입 (index type) 이 있습니다.
 
+#
+
+위에서 언급했듯이 문자마다 저장하는데 필요한 메모리 양이 다를 수 있으므로 어떤 `Character` 가 특정 위치에 있는지 확인하려면 해당 `String` 의 시작 또는 끝에서 각 유니코드 스칼라를 반복해야 합니다.
+
+이러한 이유로 Swift 문자열은 정수값으로 인덱스를 생성할 수 없습니다.
+
+#
+
+`String` 에 첫번째 `Character` 에 접근하기 위해 `startIndex` 프로퍼티를 사용합니다.
+
+`endIndex` 프로퍼티는 `String` 에 마지막 문자의 다음 위치 입니다.
+
+그 결과 `endIndex` 프로퍼티는 문자열의 서브 스크립트에 유효한 인수가 아닙니다.
+
+`String` 이 비어 있다면 `startIndex` 와 `endIndex` 는 같습니다.
+
+#
+
+`String` 의 메서드 `index(before:)` 와 `index(after:)` 를 사용하여 특정 인덱스의 전과 후의 인덱스에 접근할 수 있습니다.
+
+주어진 인덱스에서 더 멀리 있는 인덱스에 접근하려면 이러한 메서드를 여러번 호출하는 대신 `index(_:offsetBy:)` 메서드를 사용할 수 있습니다.
+
+#
+
+특정 `String` 인덱스의 `Character` 에 접근하기 위해 서브 스크립트 구문을 사용할 수 있습니다.
+
+~~~ swift
+let greeting = "Guten Tag!"
+greeting[greeting.startIndex]
+// G
+greeting[greeting.index(before: greeting.endIndex)]
+// !
+greeting[greeting.index(after: greeting.startIndex)]
+// u
+let index = greeting.index(greeting.startIndex, offsetBy: 7)
+greeting[index]
+// a
+~~~
+
+#
+
+문자열 범위 밖의 인덱스로 접근하거나 문자열 범위 밖의 인덱스의 `Character` 를 접근하려고 하면 런타임 에러가 발생합니다.
+
+~~~ swift
+greeting[greeting.endIndex] // Error
+greeting.index(after: greeting.endIndex) // Error
+~~~
+
+#
+
+`indices` 프로퍼티를 사용하여 문자열에 있는 개별 문자의 모든 인덱스에 접근할 수 있습니다.
+
+~~~ swift
+for index in greeting.indices {
+    print("\(greeting[index]) ", terminator: "")
+}
+// Prints "G u t e n   T a g ! "
+~~~
+
+> Note    
+> `Collection` 프로토콜을 준수하는 모든 타입에서 `startIndex`, `endIndex` 프로퍼티와 `index(before:)`, `index(after:)`, `index(_:offsetBy:)` 메서드를 사용할 수 있습니다.
+> 이것은 `String` 뿐만 아니라 `Array`, `Dictionary`, `Set` 과 같은 컬렉션 타입도 포함됩니다.
+
+<br>
+
+### 삽입과 삭제 (Inserting and Removing)
+
+문자열의 특정 인덱스에 단일 문자를 삽입하려면 `insert(_:at:)` 메서드를 사용하고, 특정 인덱스에 다른 문자열의 내용을 삽입하려면 `insert(contentsOf:at:)` 메서드를 사용합니다.
+
+~~~ swift
+var welcome = "hello"
+welcome.insert("!", at: welcome.endIndex)
+// welcome now equals "hello!"
+
+
+welcome.insert(contentsOf: " there", at: welcome.index(before: welcome.endIndex))
+// welcome now equals "hello there!"
+~~~
+
+#
+
+문자열의 특정 인덱스에 단일 문자를 삭제하려면 `remove(at:)` 메서드를 사용하고, 특정 범위의 부분 문자열을 제거하려면 `removeSubrange(_:)` 메서드를 사용합니다.
+
+~~~ swift
+welcome.remove(at: welcome.index(before: welcome.endIndex))
+// welcome now equals "hello there"
+
+
+let range = welcome.index(welcome.endIndex, offsetBy: -6)..<welcome.endIndex
+welcome.removeSubrange(range)
+// welcome now equals "hello"
+~~~
+
+> Note    
+> `RangeReplaceableCollection` 프로토콜을 준수하는 모든 타입에서 `insert(_:at:)`, `insert(contentsOf:at:)`, `remove(at:)`, `removeSubrange(_:)` 메서드를 사용할 수 있습니다.
+> 이것은 `String` 뿐만 아니라 `Array`, `Dictionary`, `Set` 과 같은 컬렉션 타입도 포함됩니다.
+
+<br>
+
+## 부분 문자열 (Substrings)
 
 
 
