Update 3.Strings and Characters.md

--- a/Swift Documentation/2.Language Guide/3.Strings and Characters.md
+++ b/Swift Documentation/2.Language Guide/3.Strings and Characters.md
@@ -665,10 +665,26 @@ welcome.removeSubrange(range)
 
 ## 부분 문자열 (Substrings)
 
+예를 들어 문자열에서 서브 스크립트 또는 `prefix(_:)` 와 같은 메서드를 사용하여 부분 문자열 (substring) 을 얻을 때 그 결과는 다른 문자열이 아닌 [`Substing`]() 의 인스턴스 입니다.
+
+Swift 의 부분 문자열은 문자열과 대부분 동일한 메서드를 가지고 있습니다.
+
+즉, 문자열을 사용하는 것과 동일한 방식으로 부분 문자열을 사용할 수 있다는 의미입니다.
+
+그러나 문자열과 달리 문자열에 대한 작업을 수행하는 동안 짧은 시간동안만 부분 문자열을 사용합니다.
+
+결과를 장기간 저장할 준비가 되면 부분 문자열을 `String` 의 인스턴스로 변환합니다.
+
+~~~ swift
+let greeting = "Hello, world!"
+let index = greeting.firstIndex(of: ",") ?? greeting.endIndex
+let beginning = greeting[..<index]
+// beginning is "Hello"
 
 
-
-
+// Convert the result to a String for long-term storage.
+let newString = String(beginning)
+~~~
 
 
 
