Update 3.Strings and Characters.md

--- a/Swift Documentation/2.Language Guide/3.Strings and Characters.md
+++ b/Swift Documentation/2.Language Guide/3.Strings and Characters.md
@@ -686,6 +686,41 @@ let beginning = greeting[..<index]
 let newString = String(beginning)
 ~~~
 
+#
+
+문자열과 마찬가지로 각 부분 문자열에는 부분 문자열을 구성하는 문자가 저장되는 메모리 영역이 있습니다.
+
+문자열과 부분 문자열의 차이점은 성능 최적화를 위해 부분 문자열이 원래 문자열을 저장하는데 사용된 메모리의 일부 또는 다른 부분 문자열을 저장하는데 사용되는 메모리의 일부를 재사용할 수 있다는 것입니다.
+
+(문자열의 최적화는 비슷하지만 두 문자열이 메모리를 공유하면 동일합니다.)
+
+이러한 성능 최적화는 문자열이나 부분 문자열을 수정할 때까지 메모리 복사에 따른 성능 비용을 지불할 필요가 없음을 의미합니다.
+
+위에서 언급했듯이 부분 문자열은 장기 저장에 적합하지 않습니다.
+
+왜냐하면 원래 문자열의 저장소를 재사용하기 때문에 부분 문자열이 사용되는 동안 전체 원본 문자열을 메모리에 유지되어야하기 때문입니다.
+
+#
+
+위의 예제에서 `greeting` 은 문자열을 구성하는 문자가 저장되는 메모리 영역이 있는 문자열입니다.
+
+`beginning` 은 `greeting` 의 부분 문자열이기 때문에 `greeting` 이 사용하는 메모리를 재사용 합니다.
+
+반대로 `newString` 은 문자열 입니다.
+
+부분 문자열에서 생성되면 자체 저장소를 가집니다.
+
+아래 그림은 이러한 관계를 보여줍니다.
+
+
+<img width="600" src="https://github.com/Developer-Nova/Swift-Documentation/assets/123448121/196e0b1d-ac6a-46e6-8cf5-5021e83d4819">
+
+
+
+
+
+
+
 
 
 
