Update 3.Strings and Characters.md

--- a/Swift Documentation/2.Language Guide/3.Strings and Characters.md
+++ b/Swift Documentation/2.Language Guide/3.Strings and Characters.md
@@ -712,8 +712,22 @@ let newString = String(beginning)
 
 아래 그림은 이러한 관계를 보여줍니다.
 
-
 <img width="600" src="https://github.com/Developer-Nova/Swift-Documentation/assets/123448121/196e0b1d-ac6a-46e6-8cf5-5021e83d4819">
+
+> Note    
+> `String` 과 `SubString` 은 모두 [`StringProtocol`]() 을 준수합니다.
+> 이것은 문자열 조작 함수가 `StringProtocol` 값을 허용하는 것이 편리한 경우가 많다는 것을 의미합니다.
+> 이러한 함수는 `String` 또는 `SubString` 값으로 호출할 수 있습니다.
+
+<br>
+
+### 문자열 비교 (Comparing Strings)
+
+Swift 는 텍스트 값을 비교하는 세가지 방법, 즉 문자열과 문자 동일성, 접두사 동일성, 접미사 동일성을 제공합니다.
+
+<br>
+
+#### 문자열과 문자 동등성 (String and Character Equality)
 
 
 
