Update 3.Strings and Characters.md

--- a/Swift Documentation/2.Language Guide/3.Strings and Characters.md
+++ b/Swift Documentation/2.Language Guide/3.Strings and Characters.md
@@ -769,12 +769,72 @@ if eAcuteQuestion == combinedEAcuteQuestion {
 
 #
 
-반대로 
+반대로 영어에서 사용되는 `LATIN CAPITAL LETTER A` (`U+0041`, 또는 `"A"`) 는 러시아어에서 사용되는 `CYRILLIC CAPITAL LETTER A` (`U+0410`, 또는 `"А"`) 와 동일하지 않습니다.
+
+이 문자는 모양은 같지만 언어적 의미가 같지 않습니다.
+
+~~~ swift
+let latinCapitalLetterA: Character = "\u{41}"
 
 
+let cyrillicCapitalLetterA: Character = "\u{0410}"
 
 
+if latinCapitalLetterA != cyrillicCapitalLetterA {
+    print("These two characters aren't equivalent.")
+}
+// Prints "These two characters aren't equivalent."
+~~~
 
+> Note    
+> Swift 의 문자열과 문자 비교는 지역을 구분하지 않습니다.
+
+<br>
+
+#### 접두사와 접미사 동등성 (Prefix and Suffix Equality)
+
+문자열이 특정 문자열 접두사 또는 접미사를 가지고 있는지 확인하려면 문자열의 `hasPrefix(_:)` 와 `hasSuffix(_:)` 메서드를 호출하면 됩니다.
+
+두 메서드 모두 하나의 `String` 타입 인수를 받고 부울 값을 반환합니다.
+
+#
+
+아래 예제에서는 셰익스피어의 로미오와 줄리엣에 처음 두 막의 장면을 나타내는 문자열의 배열을 나타냅니다.
+
+~~~ swift
+let romeoAndJuliet = [
+    "Act 1 Scene 1: Verona, A public place",
+    "Act 1 Scene 2: Capulet's mansion",
+    "Act 1 Scene 3: A room in Capulet's mansion",
+    "Act 1 Scene 4: A street outside Capulet's mansion",
+    "Act 1 Scene 5: The Great Hall in Capulet's mansion",
+    "Act 2 Scene 1: Outside Capulet's mansion",
+    "Act 2 Scene 2: Capulet's orchard",
+    "Act 2 Scene 3: Outside Friar Lawrence's cell",
+    "Act 2 Scene 4: A street in Verona",
+    "Act 2 Scene 5: Capulet's mansion",
+    "Act 2 Scene 6: Friar Lawrence's cell"
+]
+~~~
+
+#
+
+`hasPrefix(_:)` 메서드를 사용하여 `romeoAndJuliet` 배열의 극 1막의 장면 수를 계산할 수 있습니다.
+
+~~~ swift
+var act1SceneCount = 0
+for scene in romeoAndJuliet {
+    if scene.hasPrefix("Act 1 ") {
+        act1SceneCount += 1
+    }
+}
+print("There are \(act1SceneCount) scenes in Act 1")
+// Prints "There are 5 scenes in Act 1"
+~~~
+
+#
+
+마찬가지로 
 
 
 
