Update 3.Strings and Characters.md

--- a/Swift Documentation/2.Language Guide/3.Strings and Characters.md
+++ b/Swift Documentation/2.Language Guide/3.Strings and Characters.md
@@ -834,7 +834,68 @@ print("There are \(act1SceneCount) scenes in Act 1")
 
 #
 
-마찬가지로 
+마찬가지로 `hasSuffix(_:)` 메서드를 사용하여 Capulet 의 저택과 Lawrence 수도사의 감방 안이나 주변에서 발생하는 장면의 수를 계산할 수 있습니다.
+
+~~~ swift
+var mansionCount = 0
+var cellCount = 0
+for scene in romeoAndJuliet {
+    if scene.hasSuffix("Capulet's mansion") {
+        mansionCount += 1
+    } else if scene.hasSuffix("Friar Lawrence's cell") {
+        cellCount += 1
+    }
+}
+print("\(mansionCount) mansion scenes; \(cellCount) cell scenes")
+// Prints "6 mansion scenes; 2 cell scenes"
+~~~
+
+> Note   
+> `hasPrefix(_:)` 와 `hasSuffix(_:)` 메서드는 [문자열 및 문자 동등성 (String and Character Equality)]() 에 설명된 대로 각 문자열의 확장 문자소 클러스터 간에 문자별 표준 동등성 비교를 수행합니다.
+
+<br>
+
+## 문자열의 유니코드 표현 (Unicode Representations of Strings)
+
+유니코드 문자열이 텍스트 파일이나 다른 저장소에 기록되면 해당 문자열의 유니코드 스칼라는 정의된 여러 유니코드 인코딩 형식 중에 하나로 인코딩 됩니다.
+
+각 형식은 코드 유닛이라고 하는 작은 덩어리로 문자열을 인코딩 합니다.
+
+여기에는 UTF-8 인코딩 형식 (문자열을 8비트 코드 단위로 인코딩), UTF-16 인코딩 형식 (문자열을 16비트 코드 단위로 인코딩), UTF-32 인코딩 형식 (문자열을 32비트 코드 단위로 인코딩) 이 포함됩니다.
+
+#
+
+Swift 는 문자열의 유니코드 표현에 접근하는 여러가지 방법을 제공합니다.
+
+`for-in` 구문으로 문자열을 반복하여 유니코드 확장 문자소 클러스터로 `Character` 값에 접근할 수 있습니다.
+
+[문자 작업 (Working with Characters)]() 에 설명되어 있습니다.
+
+#
+
+또는 세가지 다른 유니코드 호환 표현중 하나의 `String` 값에 접근할 수 있습니다.
+
+- UTF-8 코드 유닛 (문자열의 `utf8` 프로퍼티로 접근)
+- UTF-16 코드 유닛 (문자열의 `utf16` 프로퍼티로 접근)
+- 문자열의 UTF-32 인코딩 형식과 동일한 21비트 유니코드 스칼라 값 (문자열의 `unicodeScalars` 프로퍼티로 접근)
+
+#
+
+아래의 각 예제는 `D`, `o`, `g`, `!!` 문자 (`DOUBLE EXCLAMATION MARK`, 또는 유니코드 스칼라 `U+203C`) 와 `🐶` 문자 (`DOG FACE` 또는 유니코드 스칼라 `U+1F436`) 로 구성된 문자열의 다양한 표현을 보여줍니다.
+
+~~~ swift
+let dogString = "Dog‼🐶"
+~~~
+
+<br>
+
+### UTF-8 표현 (UTF-8 Representation)
+
+
+
+
+
+
 
 
 
