--- a/Swift Documentation/2.Language Guide/3.Strings and Characters.md
+++ b/Swift Documentation/2.Language Guide/3.Strings and Characters.md
@@ -891,11 +891,58 @@ let dogString = "Dog‼🐶"
 
 ### UTF-8 표현 (UTF-8 Representation)
 
+`utf8` 프로퍼티를 반복하여 `String` 에 UTF-8 표현에 접근할 수 있습니다.
 
+이 프로퍼티는 문자열 UTF-8 표현의 각 바이트에 대해 하나씩 부호가 없는 8비트(`UInt8`) 값의 컬렉션인 `String.UTF8View` 타입 입니다.
 
+<img width="750" src="https://github.com/Developer-Nova/Swift-Documentation/assets/123448121/a8cd6043-3c13-4ade-b713-e55b91331820">
 
+~~~ swift
+for codeUnit in dogString.utf8 {
+    print("\(codeUnit) ", terminator: "")
+}
+print("")
+// Prints "68 111 103 226 128 188 240 159 144 182 "
+~~~
 
+위의 예제에서 처음 3개의 `codeUnit` 값 (`68`, `111`, `103`) 은 UTF-8 표현이 ASCII 표현과 동일한 문자 `D`, `o`, `g` 를 나타냅니다.
 
+다음 3개의 `codeUnit` 값 (`226`, `128`, `188`) 은 `DOUBLE EXCLAMATION MARK` 문자의 3 바이트 UTF-8 표현입니다.
+
+마지막 4개의 `codeUnit` 값 (`240`, `159`, `144`, `182`) 은 `DOG FACE` 문자의 4 바이트 UTF-8 표현입니다.
+
+<br>
+
+### UTF-16 표현 (UTF-16 Representation)
+
+`utf16` 프로퍼티를 반복하여 `String` 에 UTF-16 표현에 접근할 수 있습니다.
+
+이 프로퍼티는 문자열 UTF-16 표현의 각 16비트 코드 유닛에 대해 하나씩 부호가 없는 16비트(`UInt16`) 값의 컬렉션인 `String.UTF16View` 타입 입니다.
+
+<img width="750" src="https://github.com/Developer-Nova/Swift-Documentation/assets/123448121/d989aa45-c977-4956-8d33-5554899ef335">
+
+~~~ swift
+for codeUnit in dogString.utf16 {
+    print("\(codeUnit) ", terminator: "")
+}
+print("")
+// Prints "68 111 103 8252 55357 56374 "
+~~~
+
+처음 3개의 `codeUnit` 값 (`68`, `111`, `103`) 은 문자 `D`, `o`, `g` 를 나타내며, 해당 UTF-16 코드 유닛은 문자열의 UTF-8 표현과 동일한 값을 갖습니다.
+(이러한 유니코드 스칼라는 ASCII 문자를 나타내기 때문입니다.)
+
+네 번째 `codeUnit` 값 (`8252`) 은 `DOUBLE EXCLAMATION MARK` 문자의 유니코드 스칼라 `U+203C` 를 나타내는 16진수 `203C` 값에 해당하는 10진수 입니다.
+
+이 문자는 UTF-16 에서 단일 코드 유닛으로 표현할 수 있습니다.
+
+다섯 번째 와 여섯 번째 `codeUnit` 값 (`55357` 과 `56374`) 은 `DOG FACE` 문자의 UTF-16 대리 쌍 표현입니다.
+
+이러한 값은 상위 대리 값 `U+D83D` (10진수 값 `55357`) 과 하위 대리 값 `U+DC36` (10진수 값 `56374`) 입니다.
+
+<br>
+
+### 유니코드 스칼라 표현 (Unicode Scalar Representation)
 
 
 
