Update 3.Strings and Characters.md

--- a/Swift Documentation/2.Language Guide/3.Strings and Characters.md
+++ b/Swift Documentation/2.Language Guide/3.Strings and Characters.md
@@ -944,13 +944,40 @@ print("")
 
 ### 유니코드 스칼라 표현 (Unicode Scalar Representation)
 
+`unicodeScalars` 프로퍼티를 반복하여 `String` 값의 유니코드 스칼라 표현에 접근할 수 있습니다.
 
+이 프로퍼티는 `UnicodeScalar` 타입 값의 컬렉션인 `UnicodeScalarView` 타입 입니다.
 
+각 `UnicodeScalar` 는 `UInt32` 값안에 표현되는 스칼라의 21비트 값을 반환하는 `value` 프로퍼티를 가지고 있습니다.
 
+<img width="750" src="https://github.com/Developer-Nova/Swift-Documentation/assets/123448121/fcf2daf3-fe61-4200-a1af-83c42ce8346f">
 
+~~~ swift
+for scalar in dogString.unicodeScalars {
+    print("\(scalar.value) ", terminator: "")
+}
+print("")
+// Prints "68 111 103 8252 128054 "
+~~~
 
+`value` 프로퍼티를 통해 얻은 처음 3개의 `UnicodeScalar` 값 (`68`, `111`, `103`)은 문자 `D`, `o`, `g` 를 나타냅니다.
 
+네 번째 `codeUnit` 값 (`8252`) 은 `DOUBLE EXCLAMATION MARK` 문자의 유니코드 스칼라 `U+203C` 를 나타내는 16진수 `203C` 값에 해당하는 10진수 입니다.
 
+`value` 프로퍼티의 마지막 `UnicodeScalar` 인 `128054` 는 `DOG FACE` 문자의 유니코드 스칼라 `U+1F436` 를 나타내는 16진수 `1F436` 값과 동등한 10진수 입니다.
+
+`value` 프로퍼티 대신에 문자열 보간 등을 사용하여 새로운 `String` 값을 생성하는데 사용할 수도 있습니다.
+
+~~~ swift
+for scalar in dogString.unicodeScalars {
+    print("\(scalar) ")
+}
+// D
+// o
+// g
+// ‼
+// 🐶
+~~~
 
 ***
 
