--- a/Swift Documentation/2.Language Guide/4.Collection Types.md
+++ b/Swift Documentation/2.Language Guide/4.Collection Types.md
@@ -1,5 +1,51 @@
 # Collection Types (컬렉션 타입)
 
+배열, 집합, 딕셔너리를 사용하여 데이터를 구성합니다.
+
+Swift 는 컬렉션의 값을 저장하기 위한 배열 (array), 집합 (set), 딕셔너리 (dictionary) 와 같은 세 가지 기본 컬렉션 타입 (collection types) 을 제공합니다.
+
+배열은 순서가 지정된 값 모음입니다. 
+
+집합은 고유한 값의 순서가 지정되지 않은 컬렉션 타입 입니다.
+
+딕셔너리는 키-값 쌍의 순서가 지정되지 않은 컬렉션 타입 입니다.
+
+<img width="700" src="https://github.com/Developer-Nova/Swift-Documentation/assets/123448121/1dd0fd95-0bc2-4c89-95f1-acf9b1f1134a">
+
+Swift 의 배열, 집합, 딕셔너리는 저장할 수 있는 값과 키의 타입에 대해 항상 명확합니다.
+
+이것은 실수로 잘못된 타입의 값을 컬렉션에 추가할 수 없음을 의미합니다.
+
+이것은 또한 컬렉션에서 검색할 값의 타입에 대해 확신을 가질 수 있음을 의미합니다.
+
+> Note    
+> Swift 의 배열, 집합, 딕셔너리 타입은 제네릭 컬렉션 (generic collections) 으로 구현됩니다.
+> 제네릭 타입 및 컬렉션에 대한 자세한 내용은 [제네릭 (Generics)]() 을 참조하세요.
+
+<br>
+
+## 컬렉션의 가변성 (Mutablility of Collections)
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 ***
