--- a/Swift Documentation/2.Language Guide/4.Collection Types.md
+++ b/Swift Documentation/2.Language Guide/4.Collection Types.md
@@ -26,6 +26,20 @@ Swift 의 배열, 집합, 딕셔너리는 저장할 수 있는 값과 키의 타
 
 ## 컬렉션의 가변성 (Mutablility of Collections)
 
+배열, 집합, 딕셔너리를 생성하고 이를 변수에 할당하면 생성된 컬렉션은 변경 가능 (mutable) 합니다.
+
+이것은 컬렉션이 생성된 후에 컬렉션의 항목을 추가, 삭제, 변경하여 컬렉션을 변경 또는 변형할 수 있음을 의미합니다.
+
+배열, 집합, 딕셔너리를 상수에 할당하면 해당 컬렉션은 변경 불가능하며 크기와 컨텐츠를 변경할 수 없습니다.
+
+> Note  
+> 컬렉션을 변경할 필요가 없는 모든 경우에는 변경 불가능한 컬렉션을 만드는 것이 좋습니다.
+> 그렇게 하면 코드에 대해 더 쉽게 추론할 수 있고 Swift 컴파일러가 생성한 컬렉션의 성능을 최적화할 수 있습니다.
+
+<br>
+
+## 배열 (Arrays)
+
 
 
 
