--- a/Swift Documentation/2.Language Guide/4.Collection Types.md
+++ b/Swift Documentation/2.Language Guide/4.Collection Types.md
@@ -40,6 +40,34 @@ Swift 의 배열, 집합, 딕셔너리는 저장할 수 있는 값과 키의 타
 
 ## 배열 (Arrays)
 
+배열 (array) 은 동일한 타입의 값을 순서가 지정된 목록에 저장합니다.
+
+동일한 값이 배열의 다른 위치에 여러번 나타날 수 있습니다.
+
+> Note    
+> Swift 의 `Array` 타입은 Foundation 의 `NSArray` 클래스와 연결됩니다.
+>
+> Foundation 및 Cocoa 와 함께 `Array` 를 사용하는 방법에 대한 자세한 내용은 [Array 와 NSArray 사이의 연결 (Bridging Between Array and NSArray)]() 을 참조하세요.
+
+<br>
+
+### 배열 타입 단축 구문 (Array Type Shorthand Syntax)
+
+Swift 배열의 타입은 `Array<Element>` 로 작성합니다.
+
+여기서 `Element` 는 배열에 저장할 수 있는 값의 타입 입니다.
+
+또한 배열 타입을 축약 형식 `[Element]` 로 작성할 수도 있습니다.
+
+두가지 형식이 기능적으로 동일하지만 축약형이 선호되며 이 가이드 전체에서 배열 형식을 참조할 때 사용됩니다.
+
+<br>
+
+### 빈 배열 생성 (Creating an Empty Array)
+
+
+
+
 
 
 
