--- a/Swift Documentation/2.Language Guide/4.Collection Types.md
+++ b/Swift Documentation/2.Language Guide/4.Collection Types.md
@@ -65,9 +65,43 @@ Swift 배열의 타입은 `Array<Element>` 로 작성합니다.
 
 ### 빈 배열 생성 (Creating an Empty Array)
 
+초기화 구문을 사용하여 특정 타입의 빈 배열을 생성할 수 있습니다.
 
+~~~ swift
+var someInts: [Int] = []
+print("someInts is of type [Int] with \(someInts.count) items.")
+// Prints "someInts is of type [Int] with 0 items."
+~~~
 
+`someInts` 변수의 타입은 초기화 타입을 통해 `[Int]` 로 추론됩니다.
 
+#
+
+또는 컨텍스트가 함수 인수나 이미 타입이 지정된 변수 또는 상수와 같이 타입 정보를 이미 제공하는 경우 빈 배열 `[]` (빈 대괄호 쌍) 리터럴을 사용하여 빈 배열을 생성할 수 있습니다. 
+
+~~~ swift
+someInts.append(3)
+// someInts now contains 1 value of type Int
+someInts = []
+// someInts is now an empty array, but is still of type [Int]
+~~~
+
+<br>
+
+### 기본값을 사용하여 배열 생성 (Creating an Array with a Default Value)
+
+Swift 의 `Array` 타입은 모든 값이 동일한 기본값으로 설정된 특정 크기의 배열을 생성하기 위한 초기화도 제공합니다.
+
+적절한 타입 (파라미터 `repeating`) 의 기본값과 해당 값이 새로운 배열에 반복될 횟수 (파라미터 `count`) 를 초기화에 전달합니다.
+
+~~~ swift
+var threeDoubles = Array(repeating: 0.0, count: 3)
+// threeDoubles is of type [Double], and equals [0.0, 0.0, 0.0]
+~~~
+
+<br>
+
+### 두개의 배열을 더해 생성 (Creating Array by Adding Two Arrays Together)
 
 
 
