--- a/Swift Documentation/2.Language Guide/4.Collection Types.md
+++ b/Swift Documentation/2.Language Guide/4.Collection Types.md
@@ -103,6 +103,22 @@ var threeDoubles = Array(repeating: 0.0, count: 3)
 
 ### 두개의 배열을 더해 생성 (Creating Array by Adding Two Arrays Together)
 
+기존에 존재하는 두개의 동일한 타입의 배열을 더하기 연산자 (`+`) 를 사용하여 새로운 배열을 생성할 수 있습니다.
+
+새로운 배열의 타입은 함쳐진 두개의 배열의 타입으로 부터 추론됩니다.
+
+~~~ swift
+var anotherThreeDoubles = Array(repeating: 2.5, count: 3)
+// anotherThreeDoubles is of type [Double], and equals [2.5, 2.5, 2.5]
+
+
+var sixDoubles = threeDoubles + anotherThreeDoubles
+// sixDoubles is inferred as [Double], and equals [0.0, 0.0, 0.0, 2.5, 2.5, 2.5]
+~~~
+
+<br>
+
+### 배열 리터럴을 사용하여 배열 생성 (Creating an Array with an Array Literal)
 
 
 
