--- a/Swift Documentation/2.Language Guide/4.Collection Types.md
+++ b/Swift Documentation/2.Language Guide/4.Collection Types.md
@@ -120,13 +120,51 @@ var sixDoubles = threeDoubles + anotherThreeDoubles
 
 ### 배열 리터럴을 사용하여 배열 생성 (Creating an Array with an Array Literal)
 
+배열 리터럴 (array literal) 을 사용하여 하나 이상의 값을 배열 컬렉션에 작성하는 간단한 방법으로 배열을 초기화할 수 있습니다.
 
+배열 리터럴은 대괄호 쌍으로 묶인 값 리스트로 작성하고 쉼표로 구분하여 작성합니다.
 
+~~~ swift
+[<#value 1#>, <#value 2#>, <#value 3#>]
+~~~
 
+#
 
+아래 예제는 `String` 값을 저장하는 `shopingList` 배열을 생성하는 예입니다.
 
+~~~ swift
+var shoppingList: [String] = ["Eggs", "Milk"]
+// shoppingList has been initialized with two initial items
+~~~
 
+`shoppingList` 변수의 타입은 `[String]` 으로 쓰고 "문자열 값의 배열" 로 선언됩니다.
 
+이 배열은 `String` 값 타입을 지정했기 때문에 `String` 값만 저장할 수 있습니다.
+
+여기서 `shoppingList` 배열은 배열 리터럴 내에 작성된 두개의 `String` 값 (`"Eggs"` 와 `"Milk"`) 으로 초기화 됩니다.
+
+> Note    
+> 아래 예제에서 쇼핑 리스트에 더 많은 아이템이 추가되기 때문에 `shoppingList` 배열은 상수 (`let` 으로 선언) 가 아닌 변수 (`var` 로 선언) 로 선언되었습니다.
+
+#
+
+이 경우 배열 리터럴에는 두개의 `String` 값만 포함되고 그 외에는 아무것도 포함되지 않습니다.
+
+이것은 `shoppingList` 변수의 선언 타입 (`String` 값만 포함할 수 있는 배열) 과 일치하므로 두개의 초기 항목으로 `shoppingList` 를 초기화하는 방법으로 배열 리터럴의 할당이 허용됩니다.
+
+Swift 의 타입 추론 덕분에 동일한 타입의 값을 포함하는 배열 리터럴로 초기화 하면 배열의 타입을 명시할 필요가 없습니다.
+
+`shoppingList` 변수의 초기화는 아래와 같이 간단하게 작성될 수 있습니다.
+
+~~~ swift
+var shoppingList = ["Eggs", "Milk"]
+~~~
+
+배열 리터럴의 모든 값은 동일한 타입이기 때문에 Swift 는 `shoppingList` 변수를 사용하는데 `[String]` 이 올바른 타입이라는 것을 추론할 수 있습니다.
+
+<br>
+
+### 배열 접근과 수정 (Accessing and Modifying an Array)
 
 
 
