--- a/Swift Documentation/2.Language Guide/4.Collection Types.md
+++ b/Swift Documentation/2.Language Guide/4.Collection Types.md
@@ -166,6 +166,191 @@ var shoppingList = ["Eggs", "Milk"]
 
 ### 배열 접근과 수정 (Accessing and Modifying an Array)
 
+메서드와 프로퍼티 또는 서브 스크립트 구문을 사용하여 배열에 접근 및 수정이 가능합니다.
+
+배열에 항목의 갯수를 확인하려면 읽기 전용인 `count` 프로퍼티로 확인하면 됩니다.
+
+~~~ swift
+print("The shopping list contains \(shoppingList.count) items.")
+// Prints "The shopping list contains 2 items."
+~~~
+
+#
+
+부울 값인 `isEmpty` 프로퍼티를 사용하여 배열의 `count` 프로퍼티 값이 `0` 인지 아닌지 빠르게 판단할 수 있습니다.
+
+~~~ swift
+if shoppingList.isEmpty {
+    print("The shopping list is empty.")
+} else {
+    print("The shopping list isn't empty.")
+}
+// Prints "The shopping list isn't empty."
+~~~
+
+#
+
+배열의 `append(_:)` 메서드를 호출하여 배열의 끝에 새로운 항목을 추가할 수 있습니다.
+
+~~~ swift
+shoppingList.append("Flour")
+// shoppingList now contains 3 items, and someone is making pancakes
+~~~
+
+#
+
+또한 덧셈 할당 연산자 (`+=`) 를 사용하여 하나 이상의 동등한 항목의 배열을 추가할 수 있습니다.
+
+~~~ swift
+shoppingList += ["Baking Powder"]
+// shoppingList now contains 4 items
+shoppingList += ["Chocolate Spread", "Cheese", "Butter"]
+// shoppingList now contains 7 items
+~~~
+
+#
+
+서브 스크립트 구문 (subscript syntax) 을 사용하여 배열의 값을 가져올 수 있습니다.
+
+배열의 이름 바로 뒤에 대괄호를 붙이고 그 안에 가져오려는 값의 인덱스를 전달합니다.
+
+~~~ swift
+var firstItem = shoppingList[0]
+// firstItem is equal to "Eggs"
+~~~
+
+> Note    
+> 배열 안의 첫번째 항목은 인덱스가 `1` 이 아닌 `0` 입니다.
+> Swift 의 배열은 항상 제로-인덱스 (zero-indexed) 입니다.
+
+#
+
+서브 스크립트 구문을 사용하여 특정 인덱스의 기존 값을 변경할 수 있습니다.
+
+~~~ swift
+shoppingList[0] = "Six eggs"
+// the first item in the list is now equal to "Six eggs" rather than "Eggs"
+~~~
+
+서브 스크립트 구문을 사용할 때 지정한 인덱스는 유효해야 합니다.
+
+예를 들어 `shoppingList[shoppingList.count] = "Salt"` 로 배열 끝에 항목을 추가하려고 하면 런타임 에러가 발생합니다.
+
+#
+
+변경할 값들의 길이가 변경하려는 범위와 다른 경우에도 서브 스크립트 구문을 사용하여 범위 안에 값을 한번에 변경할 수 있습니다.
+
+아래 예제는 `"Chocolate Spread"`, `"Cheese"` 를 `"Bananas"` 와 `Apples` 로 바꿉니다.
+
+~~~ swift
+shoppingList[4...6] = ["Bananas", "Apples"]
+// shoppingList now contains 6 items
+~~~
+
+#
+
+배열의 특정 인덱스에 항목을 삽입하려면 배열의 `insert(_:at:)` 메서드를 호출합니다.
+
+~~~ swift
+shoppingList.insert("Maple Syrup", at: 0)
+// shoppingList now contains 7 items
+// "Maple Syrup" is now the first item in the list
+~~~
+
+`insert(_:at:)` 메서드를 호출하면 인덱스가 `0` 인 쇼핑 리스트에 가장 앞에 새 항목인 `"Maple Syrup"` 값을 삽입합니다.
+
+#
+
+마찬가지로 `remove(at:)` 메서드를 사용하여 배열의 항목을 삭제할 수 있습니다.
+
+이 메서드는 해당 인덱스의 항목을 삭제하고 삭제한 항목을 반환합니다. (반환된 값이 필요하지 않다면 무시해도 됩니다.)
+
+~~~ swift
+let mapleSyrup = shoppingList.remove(at: 0)
+// the item that was at index 0 has just been removed
+// shoppingList now contains 6 items, and no Maple Syrup
+// the mapleSyrup constant is now equal to the removed "Maple Syrup" string
+~~~
+
+> Note    
+> 배열의 범위를 넘는 인덱스로 값에 접근하거나 수정하려고 하면 런타임 에러가 발생합니다.
+> 인덱스를 사용하기 전에 배열의 `count` 프로퍼티와 비교하여 인덱스가 유효한지 확인할 수 있습니다.
+> 배열은 `0` 부터 인덱싱 되기 때문에 배열에서 가장 큰 유효한 인덱스는 `count - 1` 입니다.
+> 그러나 `count` 가 `0` 이면 (배열이 비어 있음을 의미) 유효한 인덱스가 없다는 의미입니다.
+
+#
+
+항목이 삭제되면 배열의 공간도 삭제되므로 인덱스 `0` 인 값은 다시 `Six eggs` 와 같습니다.
+
+~~~ swift
+firstItem = shoppingList[0]
+// firstItem is now equal to "Six eggs"
+~~~
+
+배열에서 마지막 항목을 삭제하려면 배열의 `count` 프로퍼티를 사용을 피하기 위해 `remove(at:)` 메서드 대신 `removeLast()` 메서드를 사용해야 합니다.
+
+`remove(at:)` 와 동일하게 `removeLast()` 메서드는 삭제된 항목을 반환합니다.
+
+~~~ swift
+let apples = shoppingList.removeLast()
+// the last item in the array has just been removed
+// shoppingList now contains 5 items, and no apples
+// the apples constant is now equal to the removed "Apples" string
+~~~
+
+<br>
+
+### 배열 반복 (Iterating Over an Array)
+
+`for-in` 루프를 사용하여 배열의 전체 값을 알 수 있습니다.
+
+~~~ swift
+for item in shoppingList {
+    print(item)
+}
+// Six eggs
+// Milk
+// Flour
+// Baking Powder
+// Bananas
+~~~
+
+#
+
+각 항목의 인덱스 뿐만 아니라 해당 값도 필요한 경우 `enumerated()` 메서드를 사용합니다.
+
+배열의 각 항목에 대해 `enumerated()` 메서드는 정수와 항목으로 구성된 튜플을 반환합니다.
+
+정수는 `0` 부터 시작하여 각 항목에 대해 `1` 씩 증가합니다.
+
+전체 배열을 열거하는 경우 이 정수는 항목의 인덱스와 일치합니다.
+
+이러한 경우 튜플을 임시 상수나 변수로 분해할 수도 있습니다.
+
+~~~ swift
+for (index, value) in shoppingList.enumerated() {
+    print("Item \(index + 1): \(value)")
+}
+// Item 1: Six eggs
+// Item 2: Milk
+// Item 3: Flour
+// Item 4: Baking Powder
+// Item 5: Bananas
+~~~
+
+`for-in` 루프에 대한 자세한 내용은 [For-In 루프 (For-In Loops)]() 를 참조하세요.
+
+<br>
+
+## 집합 (Sets)
+
+
+
+
+
+
+
+
 
 
 
