--- a/Swift Documentation/2.Language Guide/4.Collection Types.md
+++ b/Swift Documentation/2.Language Guide/4.Collection Types.md
@@ -344,6 +344,58 @@ for (index, value) in shoppingList.enumerated() {
 
 ## 집합 (Sets)
 
+집합 (set) 은 지정된 순서가 없이 컬렉션에 동일한 타입의 고유한 값을 저장합니다.
+
+항목의 순서가 중요하지 않거나 항목이 중복되면 안되는 경우 배열 대신 집합을 사용합니다.
+
+> Note
+> Swift 의 `Set` 타입은 Foundation 의 `NSSet` 클래스와 연결됩니다.
+>
+> Foundation 과 Cocoa 의 `Set` 에 대한 더 자세한 내용은 [Set 과 NSSet 사이의 연결 (Bridging Between Set and NSSet)]() 을 참조하세요.
+
+<br>
+
+### 집합 타입을 위한 해쉬 값 (Hash Values for Set Types)
+
+집합에 저장되려면 타입은 반드시 `hashable` 해야 합니다.
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
