--- a/Swift Documentation/2.Language Guide/4.Collection Types.md
+++ b/Swift Documentation/2.Language Guide/4.Collection Types.md
@@ -348,7 +348,7 @@ for (index, value) in shoppingList.enumerated() {
 
 항목의 순서가 중요하지 않거나 항목이 중복되면 안되는 경우 배열 대신 집합을 사용합니다.
 
-> Note
+> Note    
 > Swift 의 `Set` 타입은 Foundation 의 `NSSet` 클래스와 연결됩니다.
 >
 > Foundation 과 Cocoa 의 `Set` 에 대한 더 자세한 내용은 [Set 과 NSSet 사이의 연결 (Bridging Between Set and NSSet)]() 을 참조하세요.
@@ -359,11 +359,62 @@ for (index, value) in shoppingList.enumerated() {
 
 집합에 저장되려면 타입은 반드시 `hashable` 해야 합니다.
 
+즉, 타입이 자체적으로 해쉬 값 (hash value) 을 계산하는 방법을 제공해야 합니다.
 
+해쉬 값은 동일하게 비교되는 모든 객체에 대해 동일한 값입니다.
 
+즉, `Int` 값으로 `a == b` 이면 `a.hashValue == b.hashValue` 를 따릅니다.
 
+#
 
+Swift 의 모든 기본 타입 (`String`, `Int`, `Double`, `Bool`) 은 기본적으로 hashable 하며 집합의 값 타입 또는 딕셔너리의 키 타입으로 사용할 수 있습니다.
 
+연관된 값이 없는 열거형 케이스 값 ([열거형 (Enumerations)]() 에 설명된 대로) 도 기본적으로 hashable 합니다.
+
+> Note    
+> Swift 표준 라이브러리의 `Hashable` 프로토콜을 채택하여 사용자 정의 타입을 집합 값의 타입 또는 딕셔너리 키 타입으로 사용할 수 있습니다.
+> 필수 구현 메서드인 `hash(into:)` 메서드를 구현하는 것에 대한 자세한 내용은 [`Hashable`]() 을 참조하세요.
+> 프로토콜 준수에 대한 자세한 내용은 [프로토콜 (Protocols)]() 을 참조하세요.
+
+<br>
+
+### 집합 타입 구문 (Set Type Syntax)
+
+Swift 집합의 타입은 `Set<Element>` 와 같이 작성됩니다.
+
+여기서 `Element` 는 집합이 저장할 수 있는 값의 타입입니다.
+
+배열과 다르게 집합은 동등한 단축 형식이 없습니다.
+
+<br>
+
+### 빈 집합 생성 및 초기화 (Creating Initializing an Empty Set)
+
+초기화 구문을 사용하여 특정 타입의 빈 집합을 생성할 수 있습니다.
+
+~~~ swift
+var letters = Set<Character>()
+print("letters is of type Set<Character> with \(letters.count) items.")
+// Prints "letters is of type Set<Character> with 0 items."
+~~~
+
+> Note    
+> `letters` 변수의 타입은 초기화의 타입에서 `Set<Character>` 로 추론됩니다.
+
+#
+
+또는 컨텍스트가 함수 인수 또는 이미 타입이 지정된 변수 또는 상수와 같이 타입 정보를 제공하는 경우 빈 배열 리터럴을 사용하여 빈 집합을 생성할 수 있습니다.
+
+~~~ swift
+letters.insert("a")
+// letters now contains 1 value of type Character
+letters = []
+// letters is now an empty set, but is still of type Set<Character>
+~~~
+
+<br>
+
+### 배열 리터럴을 사용하여 집합 생성 (Creating a Set with an Array Literal)
 
 
 
