--- a/Swift Documentation/2.Language Guide/4.Collection Types.md
+++ b/Swift Documentation/2.Language Guide/4.Collection Types.md
@@ -416,7 +416,14 @@ letters = []
 
 ### 배열 리터럴을 사용하여 집합 생성 (Creating a Set with an Array Literal)
 
+하나 이상의 값을 집합 컬렉션으로 작성하는 간단한 방법으로 배열 리터럴을 사용하여 집합을 초기화 할 수도 있습니다.
 
+아래 예제에서는 `String` 값을 저장하는 `favoriteGenres` 라는 집합을 생성합니다.
+
+~~~ swift
+var favoriteGenres: Set<String> = ["Rock", "Classical", "Hip hop"]
+// favoriteGenres has been initialized with three initial items
+~~~
 
 
 
