--- a/Swift Documentation/2.Language Guide/4.Collection Types.md
+++ b/Swift Documentation/2.Language Guide/4.Collection Types.md
@@ -425,6 +425,34 @@ var favoriteGenres: Set<String> = ["Rock", "Classical", "Hip hop"]
 // favoriteGenres has been initialized with three initial items
 ~~~
 
+`favoriteGenres` 변수는 `Set<String>` "`String` 값의 집합" 으로 선언됩니다.
+
+이 특정 집합은 `String` 값 타입을 지정했기 때문에 `String` 값만 저장할 수 있습니다.
+
+여기서 `favoriteGenres` 집합은 배열 리터럴 내부에 작성된 세개의 `String` 값 (`"Rock"`, `"Classical"`, `"Hip hop"`) 으로 초기화 됩니다.
+
+> Note    
+> `favoriteGenres` 집합은 아래 예제에서 아이템을 추가하거나 삭제하기 때문에 상수 (`let`) 가 아닌 변수 (`var`) 로 선언되었습니다.
+
+#
+
+집합 타입은 배열 리터럴만으로는 추론할 수 없기 때문에 `Set` 타입은 명시적으로 선언해야 합니다.
+
+그러나 Swift 의 타입 추론으로 인해 한가지 타입의 값만 포함하는 배열 리터럴로 초기화하는 경우 집합 요소의 타입을 명시하지 않아도 됩니다.
+
+때문에 `favoriteGenres` 초기화는 짧게 작성할 수 있습니다.
+
+~~~ swift
+var favoriteGenres: Set = ["Rock", "Classical", "Hip hop"]
+~~~
+
+배열 리터럴의 모든 값은 동일한 타입이기 때문에 Swift 는 `favoriteGenres` 변수를 사용할 올바른 타입 `Set<String>` 이라고 타입을 추론할 수 있습니다.
+
+<br>
+
+### 집합 접근 및 수정 (Accessing and Modifying a Set)
+
+
 
 
 
