--- a/Swift Documentation/2.Language Guide/4.Collection Types.md
+++ b/Swift Documentation/2.Language Guide/4.Collection Types.md
@@ -452,11 +452,72 @@ var favoriteGenres: Set = ["Rock", "Classical", "Hip hop"]
 
 ### 집합 접근 및 수정 (Accessing and Modifying a Set)
 
+해당 메서드와 프로퍼티를 통해 집합에 접근하고 수정할 수 있습니다.
 
+읽기 전용 `count` 프로퍼티로 집합의 항목 갯수를 알 수 있습니다.
 
+~~~ swift
+print("I have \(favoriteGenres.count) favorite music genres.")
+// Prints "I have 3 favorite music genres."
+~~~
 
+#
 
+`count` 프로퍼티가 `0` 과 같은지를 부울 값인 `isEmpty` 프로퍼티를 사용해 확인할 수 있습니다.
 
+~~~ swift
+if favoriteGenres.isEmpty {
+    print("As far as music goes, I'm not picky.")
+} else {
+    print("I have particular music preferences.")
+}
+// Prints "I have particular music preferences."
+~~~
+
+#
+
+집합의 `insert(_:)` 메서드를 호출하여 집합에 새로운 항목을 추가할 수 있습니다.
+
+~~~ swift
+favoriteGenres.insert("Jazz")
+// favoriteGenres now contains 4 items
+~~~
+
+#
+
+집합의 `remove(_:)` 메서드를 호출하여 집합에서 항목을 삭제할 수 있습니다.
+
+`remove(_:)` 메서드는 집합에 항목이 있을 경우 해당 항목을 삭제하고 삭제된 값을 반환합니다.
+
+해당 항목이 없을 경우 `nil` 을 반환합니다.
+
+또는 `removeAll()` 메서드를 사용하여 집합의 모든 항목을 삭제할 수 있습니다.
+
+~~~ swift
+if let removedGenre = favoriteGenres.remove("Rock") {
+    print("\(removedGenre)? I'm over it.")
+} else {
+    print("I never much cared for that.")
+}
+// Prints "Rock? I'm over it."
+~~~
+
+#
+
+`contains(_:)` 메서드를 사용하여 집합에 특정 항목이 포함되어 있는지 확인할 수 있습니다.
+
+~~~ swift
+if favoriteGenres.contains("Funk") {
+    print("I get up on the good foot.")
+} else {
+    print("It's too funky in here.")
+}
+// Prints "It's too funky in here."
+~~~
+
+<br>
+
+### 집합 반복 (Iterating Over a Set)
 
 
 
