--- a/Swift Documentation/2.Language Guide/4.Collection Types.md
+++ b/Swift Documentation/2.Language Guide/4.Collection Types.md
@@ -519,8 +519,37 @@ if favoriteGenres.contains("Funk") {
 
 ### 집합 반복 (Iterating Over a Set)
 
+`for-in` 루프를 사용하여 집합의 값을 반복할 수 있습니다.
 
+~~~ swift
+for genre in favoriteGenres {
+    print("\(genre)")
+}
+// Classical
+// Jazz
+// Hip hop
+~~~
 
+`for-in` 루프에 대한 자세한 내용은 [For-In 루프 (For-In Loops)]() 를 참조하세요.
+
+#
+
+Swift 의 `Set` 타입은 정의된 순서를 가지고 있지 않습니다.
+
+특정 순서로 집합의 값을 반복하려면 집합의 요소를 `<` 연산자를 사용해서 정렬하여 반환하는 `sorted()` 메서드를 사용합니다.
+
+~~~ swift
+for genre in favoriteGenres.sorted() {
+    print("\(genre)")
+}
+// Classical
+// Hip hop
+// Jazz
+~~~
+
+<br>
+
+## 집합 연산 수행 (Performing Set Operations)
 
 
 
