--- a/Swift Documentation/2.Language Guide/4.Collection Types.md
+++ b/Swift Documentation/2.Language Guide/4.Collection Types.md
@@ -551,6 +551,12 @@ for genre in favoriteGenres.sorted() {
 
 ## 집합 연산 수행 (Performing Set Operations)
 
+두 집합을 합치거나, 두 집합이 공통적으로 갖는 값을 확인하거나, 두 집합에 동일한 값이 모두 포함되어 있는지, 또는 하나의 집합에만 포함되거나 전형 포함되어있지 않은지 확인하는 등 기본적인 집합 연산을 효율적으로 수행할 수 있습니다.
+
+<br>
+
+### 기본 집합 연산 (Fundamental Set Operations)
+
 
 
 
